# intership_back

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt
app/core/: settings.py
app/database/: db.py  redis_connector.py
app/dtos/: action.py  analytics.py  auth.py  company.py  notification.py  quiz.py  result.py  user.py
app/entity/: base_models.py  enums.py  models.py
app/repository/: action.py  analytics.py  answer.py  base_repository.py  company.py  notification.py  question.py  quiz.py  result.py  users.py
app/routes/: action.py  analytics.py  auth.py  company.py  healthcheckers.py  notification.py  quiz.py  result.py  users.py
app/services/: action.py  analytics.py  auth.py  company.py  errors.py  notification.py  quiz.py  result.py  user.py
app/utils/: auth.py  celery_worker.py  hash_password.py  message_for_actions.py  redis.py
migrations/: env.py
migrations/versions/: 09ca650798c1_init.py  2e623d429c22_add_tables_quiz_question_answer.py  587573d4e1f5_add_refresh_token.py  633d110a9451_remove_refresh_token.py  7e5c85e28b83_add_table_notification.py  91b9c636fb76_add_company.py  91bab6a92cea_add_table_action.py  a1e52b68e613_add_tables_result.py  a72d0cd22ba6_fixes_models.py
tests/: test_crud_operations.py  test_start_app.py
